overflow fix

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -123,6 +123,8 @@ img {
 }
 #form-field {
 	max-width: 80%;
+	width: 80%;
+	overflow-x: hidden;
 }
 .pdf-links {
     list-style-position: outside;
